# chime-frb-beam-model

./: .gitignore  LICENSE  README.md  pyproject.toml
cfbm/: __init__.py  base.py  composite.py  config.py  formed.py  primary.py  utils.py
cfbm/bm_data/: .gitignore  get_data.py
tests/: test_beam_model.py
